Horde3D/Bindings/C++/Horde3D.h

#		define DLL extern "C" __declspec( dllimport )
#   define DLL extern "C" __attribute__ ((visibility("default")))
#		define DLL extern "C"
typedef int H3DRes;
typedef int H3DNode;
struct H3DRenderDevice
{
	enum List
	{
		OpenGL2 = 2,
		OpenGL4 = 4
	};
};
struct H3DOptions
{
	enum List
	{
		MaxLogLevel = 1,
		MaxNumMessages,
		TrilinearFiltering,
		MaxAnisotropy,
		TexCompression,
		SRGBLinearization,
		LoadTextures,
		FastAnimation,
		ShadowMapSize,
		SampleCount,
		WireframeMode,
		DebugViewMode,
		DumpFailedShaders,
		GatherTimeStats
	};
};
struct H3DStats
{
	enum List
	{
		TriCount = 100,
		BatchCount,
		LightPassCount,
		FrameTime,
		AnimationTime,
		GeoUpdateTime,
		ParticleSimTime,
		FwdLightsGPUTime,
		DefLightsGPUTime,
		ShadowsGPUTime,
		ParticleGPUTime,
		TextureVMem,
		GeometryVMem
	};
};
struct H3DNodeTypes
{
	enum List
	{
		Undefined = 0,
		Group,
		Model,
		Mesh,
		Joint,
		Light,
		Camera,
		Emitter,
		Compute
	};
};
DLL const char *h3dGetVersionString();
DLL bool h3dCheckExtension( const char *extensionName );
DLL bool h3dGetError();
DLL bool h3dInit( H3DRenderDevice::List deviceType );
DLL void h3dRelease();
DLL void h3dRender( H3DNode cameraNode );
DLL void h3dFinalizeFrame();
DLL void h3dClear();
DLL const char *h3dGetMessage( int *level, float *time );
DLL float h3dGetOption( H3DOptions::List param );
DLL bool h3dSetOption( H3DOptions::List param, float value );
DLL float h3dGetStat( H3DStats::List param, bool reset );
DLL void h3dShowOverlays( const float *verts, int vertCount, float colR, float colG, float colB,
                          float colA, H3DRes materialRes, int flags );
DLL void h3dClearOverlays();
DLL int h3dGetResType( H3DRes res );
DLL const char *h3dGetResName( H3DRes res );
DLL H3DRes h3dGetNextResource( int type, H3DRes start );
DLL H3DRes h3dFindResource( int type, const char *name );
DLL H3DRes h3dAddResource( int type, const char *name, int flags );
DLL H3DRes h3dCloneResource( H3DRes sourceRes, const char *name );
DLL int h3dRemoveResource( H3DRes res );
DLL bool h3dIsResLoaded( H3DRes res );
DLL bool h3dLoadResource( H3DRes res, const char *data, int size );
DLL void h3dUnloadResource( H3DRes res );
DLL int h3dGetResElemCount( H3DRes res, int elem );
DLL int h3dFindResElem( H3DRes res, int elem, int param, const char *value );
DLL int h3dGetResParamI( H3DRes res, int elem, int elemIdx, int param );
DLL void h3dSetResParamI( H3DRes res, int elem, int elemIdx, int param, int value );
DLL float h3dGetResParamF( H3DRes res, int elem, int elemIdx, int param, int compIdx );
DLL void h3dSetResParamF( H3DRes res, int elem, int elemIdx, int param, int compIdx, float value );
DLL const char *h3dGetResParamStr( H3DRes res, int elem, int elemIdx, int param );
DLL void h3dSetResParamStr( H3DRes res, int elem, int elemIdx, int param, const char *value );
DLL void *h3dMapResStream( H3DRes res, int elem, int elemIdx, int stream, bool read, bool write );
DLL void h3dUnmapResStream( H3DRes res );
DLL H3DRes h3dQueryUnloadedResource( int index );
DLL void h3dReleaseUnusedResources();
DLL H3DRes h3dCreateTexture( const char *name, int width, int height, int fmt, int flags );
DLL void h3dSetShaderPreambles( const char *vertPreamble, const char *fragPreamble );
DLL bool h3dSetMaterialUniform( H3DRes materialRes, const char *name, float a, float b, float c, float d );
DLL void h3dResizePipelineBuffers( H3DRes pipeRes, int width, int height );
DLL int h3dGetNodeType( H3DNode node );
DLL H3DNode h3dGetNodeParent( H3DNode node );
DLL bool h3dSetNodeParent( H3DNode node, H3DNode parent );
DLL H3DNode h3dGetNodeChild( H3DNode node, int index );
DLL H3DNode h3dAddNodes( H3DNode parent, H3DRes sceneGraphRes );
DLL void h3dRemoveNode( H3DNode node );
DLL bool h3dCheckNodeTransFlag( H3DNode node, bool reset );
DLL void h3dGetNodeTransform( H3DNode node, float *tx, float *ty, float *tz,
                              float *rx, float *ry, float *rz, float *sx, float *sy, float *sz );
DLL void h3dSetNodeTransform( H3DNode node, float tx, float ty, float tz,
                              float rx, float ry, float rz, float sx, float sy, float sz );
DLL void h3dGetNodeTransMats( H3DNode node, const float **relMat, const float **absMat );
DLL void h3dSetNodeTransMat( H3DNode node, const float *mat4x4 );
DLL int h3dGetNodeParamI( H3DNode node, int param );
DLL void h3dSetNodeParamI( H3DNode node, int param, int value );
DLL float h3dGetNodeParamF( H3DNode node, int param, int compIdx );
DLL void h3dSetNodeParamF( H3DNode node, int param, int compIdx, float value );
DLL const char *h3dGetNodeParamStr( H3DNode node, int param );
DLL void h3dSetNodeParamStr( H3DNode node, int param, const char *value );
DLL int h3dGetNodeFlags( H3DNode node );
DLL void h3dSetNodeFlags( H3DNode node, int flags, bool recursive );
DLL void h3dGetNodeAABB( H3DNode node, float *minX, float *minY, float *minZ,
                         float *maxX, float *maxY, float *maxZ );
DLL int h3dFindNodes( H3DNode startNode, const char *name, int type );
DLL H3DNode h3dGetNodeFindResult( int index );
DLL void h3dSetNodeUniforms( H3DNode node, float *uniformData, int count );